Removed unsuppoeted Java 11 .toList()